# statistical_data_analysis

./: CMakeLists.txt  LICENSE  README.md  package.xml  sample_correlation_coefficient.py  sample_multiple_comparison.py  sample_multiple_sample_test_of_interval_and_ratio_scale.py  sample_multiple_sample_test_of_nominal_scale.py  sample_multiple_sample_test_of_ordinal_scale.py  sample_one_sample_test_of_nominal_scale.py  sample_two_sample_test_of_interval_and_ratio_scale.py  sample_two_sample_test_of_nominal_scale.py  sample_two_sample_test_of_ordinal_scale.py
arduino/: README.md
doc/: introduction.md  multisample_qualitative.md  multisample_quantitative.md  qualitative_data.md  quantitative_data.md  report_sample.md  twosample_qualitative.md  twosample_quantitative.md
draw/: __init__.py  chi_squared_test_draw_table.py  draw_box_graph.py  draw_graph.py  openlab2017_s_female.csv  venn.py
interval_and_ratio/: CRFpq.py  RBFpq.py  SPFpq.py  __init__.py  multiple_comparison.py  one_way_anova.py  one_way_anova_draw_table.py  paired_two_sample_test_of_interval_and_ratio_scale.py  two_way_anova.py  two_way_anova_draw_table.py  unpaired_two_sample_test_of_interval_and_ratio_scale.py  utils.py
multiple_comparison/: multiple_comparison.py
nominal/: chi_squared_test.py  fisher_test.py  one_condition_nominal_scale.py  paired_multiple_sample_test_of_nominal_scale.py  paired_two_sample_test_of_nominal_scale.py  spearmans_rank_correlation_coefficient.py  unpaired_multiple_sample_test_of_nominal_scale.py  unpaired_two_sample_test_of_nominal_scale.py
opencv/: Makefile  draw_text.py  face_detection.py  restore_3dpos.cpp  restore_3dpos_video.cpp
ordinal/: __init__.py  paired_multiple_sample_test_of_ordinal_scale.py  paired_two_sample_test_of_ordinal_scale.py  unpaired_multiple_sample_test_of_ordinal_scale.py  unpaired_two_sample_test_of_ordinal_scale.py
scripts/: face_detection.py
src/: Makefile  cv_bridge_python.py  face_detection.cpp
statistics/: README.md  multisample_qualitative.md  multisample_quantitative.md  qualitative_data.md  quantitative_data.md  twosample_qualitative.md  twosample_quantitative.md
statistics/src/: CRFpq.py  McNemar_test.py  RBFpq.py  __init__.py  analysis_of_variance.py  anova.py  calculate_average.py  calculate_variance.py  chi_squared_test.py  draw_graph.py  (+49 more)
text_mining/: create_txt_per_line_from_csv.py
use_scipy_function/: paired_two_sample_test_of_ordinal_scale.py  sample_multiple_sample_test_of_interval_and_ratio_scale.py  sample_multiple_sample_test_of_ordinal_scale.py  sample_two_sample_test_of_interval_and_ratio_scale.py  sample_two_sample_test_of_ordinal_scale.py  unpaired_two_sample_test_of_interval_and_ratio_scale.py  unpaired_two_sample_test_of_nominal_scale.py
(+19 files in other folders)
